--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "@slack/bolt": "^3.17.1"
+    "@slack/bolt": "^3.17.1",
+    "dotenv": "^16.4.5"
   }
 }
