npm install @google/generative-ai

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
     "@slack/bolt": "^3.17.1",
     "dotenv": "^16.4.5"
   }
