--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.1",
     "@slack/bolt": "^3.17.1",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "redis": "^4.6.13"
   }
 }
